k8s-monitoring/monitoring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-server-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: raillo-issuer # https.yml의 issuer 이름과 일치
spec:
  # ingress에서 인증처리
  tls:
    - hosts:
        - monitoring.raillo.shop
      secretName: monitoring-raillo-com-tls  # 해당 host에 해당 이름으로 인증서에 secret 생성
  rules:
    - host: monitoring.raillo.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana  # grafana 의 3000포트로 라우팅
                port:
                  number: 3000
